--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
         "build": "eslint src && pulp build -- --censor-lib --strict"
     },
     "devDependencies": {
-        "eslint": "^7.15.0",
-        "pulp": "16.0.0-0",
+        "eslint": "^7.32.0",
+        "pulp": "^16.0.0",
         "purescript-psa": "^0.8.2",
-        "rimraf": "^2.6.2"
+        "rimraf": "^2.7.1",
+        "spago": "^0.20.9"
     }
 }
